# adk-samples

python/agents/claim-adjudication-agent/: README.md  commands.txt  pyproject.toml  session-f9fb67c5-a553-4ae0-8e0f-317a4ccff760.json
python/agents/claim-adjudication-agent/claim_adjudication_agent/: __init__.py  agent.py  prompt.py
python/agents/claim-adjudication-agent/claim_adjudication_agent/sub_agents/amount_adjudication/: agent.py  prompt.py
python/agents/claim-adjudication-agent/claim_adjudication_agent/sub_agents/claim_admissibility/: agent.py  prompt.py
python/agents/claim-adjudication-agent/claim_adjudication_agent/sub_agents/summary_writer/: agent.py  prompt.py
python/agents/claim-adjudication-agent/claim_adjudication_agent/tools/: tools.py
python/agents/claim-adjudication-agent/deployment/: deploy.py  test_deployment.py
python/agents/claim-adjudication-agent/eval/: test_eval.py
python/agents/claim-adjudication-agent/tests/: test_agents.py
